feat: add username to english translation.json

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -411,7 +411,9 @@
     "newPass": "New password",
     "couponExample": "Example SAVE20",
     "fullName": "Full Name",
+    "username": "Username",
     "emailOrPhone": "Email or Phone Number",
+    "email": "Email",
     "password": "Password"
   },
   "inputsLabels": {
