--- a/frontend/public/locale/ar/translation.json
+++ b/frontend/public/locale/ar/translation.json
@@ -284,8 +284,8 @@
   "aboutPage": {
     "heroSection": {
       "heading": "قصتنا",
-      "paragraphOne": "أُطلق E-commercew في عام 2024، هو السوق الرائد للتسوق عبر الإنترنت في العراق، يخدم العملاء في جميع أنحاء البلاد. مع تركيز قوي على التسوق الشخصي، وتحليلات البيانات المتقدمة، وحلول الخدمة الشاملة، تدعم E-commercew أكثر من 10,500 بائع و300 علامة تجارية، تصل إلى 3 ملايين عميل في جميع أنحاء البلاد.",
-      "paragraphTwo": "تقدم E-commercew مجموعة واسعة من أكثر من مليون منتج، وتواصل التوسع لتلبية الاحتياجات المتنوعة لعملائها. من الإلكترونيات إلى الأزياء، ومن السلع المنزلية إلى منتجات الجمال، توفر E-commercew مجموعة واسعة من الفئات للاختيار من بينها.",
+      "paragraphOne": "أُطلق EShop في عام 2024، هو السوق الرائد للتسوق عبر الإنترنت في العراق، يخدم العملاء في جميع أنحاء البلاد. مع تركيز قوي على التسوق الشخصي، وتحليلات البيانات المتقدمة، وحلول الخدمة الشاملة، تدعم EShop أكثر من 10,500 بائع و300 علامة تجارية، تصل إلى 3 ملايين عميل في جميع أنحاء البلاد.",
+      "paragraphTwo": "تقدم EShop مجموعة واسعة من أكثر من مليون منتج، وتواصل التوسع لتلبية الاحتياجات المتنوعة لعملائها. من الإلكترونيات إلى الأزياء، ومن السلع المنزلية إلى منتجات الجمال، توفر EShop مجموعة واسعة من الفئات للاختيار من بينها.",
       "imageAlt": "امرأتان شابتان سعيدتان بالتسوق"
     },
     "cardInfo": {
