feat: update user profile form to include phone number and username fields

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -420,6 +420,7 @@
     "firstName": "First Name",
     "lastName": "Last Name",
     "email": "Email",
+    "username": "Username",
     "companyName": "Company Name",
     "streetAddress": "Street Address",
     "apartment": "Apartment, floor, etc. (optional)",
