--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -511,6 +511,7 @@
     "addToFavorite": "Please sign in to add/remove product to favorites.",
     "addToWishList": "Please sign in to add/remove product to wishlist.",
     "signInSuccess": "You signed in successfully, Welcome!",
+    "signInFailed": "Failed to sign in, Please check your internet connection.",
     "signOutSuccess": "You Signed out of your account.",
     "pageRequiringSignIn": "Please sign in to visit this page.",
     "signInToPerformAction": "You have to sign in to do this action.",
