feat: add seller link

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -17,7 +17,8 @@
     "contact": "Contact",
     "about": "About",
     "profile": "Profile",
-    "signUp": "Sign Up"
+    "signUp": "Sign Up",
+    "sellerCenter": "Seller Center"
   },
   "navTools": {
     "favorite": "Favorites",
