feat: add start selling page

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -18,7 +18,8 @@
     "about": "About",
     "profile": "Profile",
     "signUp": "Sign Up",
-    "sellerCenter": "Seller Center"
+    "sellerCenter": "Seller Center",
+    "becomeSeller": "Become Seller"
   },
   "navTools": {
     "favorite": "Favorites",
