feat: add enum for order status and create the new reducer for moving product to order

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -483,7 +483,8 @@
       "product": "Product",
       "price": "Price",
       "quantity": "Quantity",
-      "subtotal": "Subtotal"
+      "subtotal": "Subtotal",
+      "status": "Status"
     },
     "cartInfoMenu": {
       "cartTotal": "Cart Total",
