feat: add login option to navigation and adjust scroll position in login, reset password, and sign up components

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -18,6 +18,7 @@
     "about": "About",
     "profile": "Profile",
     "signUp": "Sign Up",
+    "login": "Log In",
     "sellerCenter": "Seller Center",
     "becomeSeller": "Become Seller"
   },
