feat: add Contact to Shop button and related styles, update icons data

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -149,6 +149,7 @@
     "productRate": "Product rate is {{rate}} of 5 stars",
     "reviews": "({{votes}} Reviews)",
     "inStock": "In Stock",
+    "contact": "Contact",
     "colors": "Colors",
     "size": "Size",
     "addToFav": "Add to Favorites",
