refactor: update order processing logic and schemas to improve data handling and consistency

--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -435,7 +435,7 @@
     "receiverName": "Receiver Name",
     "city": "City",
     "companyName": "Company Name",
-    "streetAddress": "Street Address",
+    "shippingAddress": "Shipping Address",
     "apartment": "Apartment, floor, etc. (optional)",
     "cityOrTown": "Town/City",
     "phoneNumber": "Phone Number",
